
2004.06.xx  -  0.19.0
 * Enh #0000: Change of terminology, replaced "bug" with "issue" [first step in #2710].
 * Enh #0000: Generate one email per user. Stage #2 (minor send mail optimization - used kept alive SMTP connection).
 * Enh #0000: phpMailer 1.71 has been included to Mantis distribution, all the mails are sent now only by phpMailer.
 * Enh #2200: Add Version to simple bug pages.
 * Enh #3300: Add global defaults for priotity and severity of new bugs.
 * Enh #3302: Add global defaults for view state.
 * Enh #3620: Redesigned filter interface.
 * Enh #3633: Experimental support for MSSQL, PgSQL and other databases using ADODB.
 * Enh #3662: Provide more config vars to control viewing/downloading/deleting bug attachments.
 * Enh #3663: Remember filter settings for each project.
 * Enh #3676: Use status threshold rather than hide resolved/closed in filter.
 * Enh #3688: Add threshold for changing the bug/bugnote view status.
 * Enh #3690: Request for directly setting reminders private.
 * Enh #3713: Allow users to set severity levels along with email preferences.
 * Enh #3735: New CSS class for HTML Form Buttons
 * Enh #3801: Add "myself" meta filter options.
 * Enh #3808: Ability to sponsor (fund) a bug or feature request.
 * Fix #3094: Switching projects clears filter values.
 * Fix #3397: Delete notification should be off when deleting a project.
 * Fix #3622: Tweak attachment SQL in print bug pages.
 * Fix #3629: Duplicate Error ID.
 * Fix #3641: 'Date submited' in reports is always '12-31-69'.
 * Fix #3723: No ability to edit or even delete news is associated project was deleted.
 * New Config: set_view_status_threshold (default REPORTER) - threshold needed to set the view status while reporting a bug / bugnote.
 * New Config: change_view_status_threshold (default UPDATER) - threshold needed to update the view status while updating a bug / bugnote.