@@ -6,7 +6,7 @@
 	# See the README and LICENSE files for details
 
 	# --------------------------------------------------------
-	# $Id: bug_update_page.php,v 1.67 2004-04-12 21:04:35 jlatour Exp $
+	# $Id: bug_update_page.php,v 1.68 2004-05-17 11:39:06 vboctor Exp $
 	# --------------------------------------------------------
 ?>
 <?php
@@ -26,6 +26,11 @@
 
 	if ( ADVANCED_ONLY == config_get( 'show_update' ) ) {
 		print_header_redirect ( 'bug_update_advanced_page.php?bug_id=' . $f_bug_id );
+	}
+
+	if ( bug_is_readonly( $f_bug_id ) ) {
+		error_parameters( $f_bug_id );
+		trigger_error( ERROR_BUG_READ_ONLY_ACTION_DENIED, ERROR );
 	}
 
 	access_ensure_bug_level( config_get( 'update_bug_threshold' ), $f_bug_id );
