@@ -6,7 +6,7 @@
 	# See the README and LICENSE files for details
 
 	# --------------------------------------------------------
-	# $Id: bugnote_set_view_state.php,v 1.23 2004-01-11 07:16:06 vboctor Exp $
+	# $Id: bugnote_set_view_state.php,v 1.24 2004-05-17 11:39:07 vboctor Exp $
 	# --------------------------------------------------------
 ?>
 <?php
@@ -28,8 +28,9 @@
 
 	# Check if the bug has been resolved
 	$t_bug_id = bugnote_get_field( $f_bugnote_id, 'bug_id' );
-	if ( bug_get_field( $t_bug_id, 'status' ) >= config_get( 'bug_resolved_status_threshold' ) ) {
-		trigger_error( ERROR_BUG_RESOLVED_ACTION_DENIED, ERROR );
+	if ( bug_is_readonly( $t_bug_id ) ) {
+		error_parameters( $t_bug_id );
+		trigger_error( ERROR_BUG_READ_ONLY_ACTION_DENIED, ERROR );
 	}
 
 	bugnote_set_view_state( $f_bugnote_id, $f_private );
